<resources>
    <string name="app_name">Address Book</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="title_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="title_email">Email Address</string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_address">Address</string>
    <string name="title_save">Save</string>
    <string name="title_no_contacts_yet">No Contacts Yet</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="title_synced_contacts">Synced Contacts</string>
    <string name="notification_cancel_action_text">Cancel</string>
    <string name="notification_text_content">Address Book is syncing your contacts with the server</string>
    <string name="notification_text_title">Address Book</string>
    <string name="title_remote_contacts">Remote Contacts</string>
</resources>
